@@ -510,9 +510,22 @@ OvmsMetrics
     Returns the float representation of the metric value.
 - ``str = OvmsMetrics.AsJSON(metricname)``
     Returns the JSON representation of the metric value.
+- ``obj = OvmsMetrics.GetValues(filter, decode)``
+    Returns an object of all metrics matching the optional name filter (substring),
+    optionally decoded into Javascript types (i.e. numerical values will be JS numbers, arrays
+    will be JS arrays etc.). The object returned is a snapshot, the values won't be updated.
 
-Hint: to process array metrics from Javascript, parse their JSON representation using ``eval()``, 
-``JSON.parse()`` or ``Duktape.dec()``. Example:
+With the introduction of the ``OvmsMetrics.GetValues()`` call, you can get multiple metrics
+at once and let the system decode them for you. Using this you can for example do:
+
+.. code-block:: javascript
+
+  var metrics = OvmsMetrics.GetValues("v.b.c.", true);
+  print("Temperature of cell 3: " + metrics["v.b.c.temp"][2] + " °C\n");
+  print("Voltage of cell 7: " + metrics["v.b.c.voltage"][6] + " V\n");
+
+This obsoletes the old pattern of parsing a metric's JSON representation using ``eval()``, 
+``JSON.parse()`` or ``Duktape.dec()`` you may still find in some plugins. Example:
 
 .. code-block:: javascript
 
