@@ -1,6 +1,7 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
+- Scripting API: added OvmsMetrics.GetValues()
 - Web UI: editor extended by embedded Javascript evaluation
 - Webserver: /api/execute: support for Javascript evaluation
 - Scripting API: added OvmsConfig.GetValues() & OvmsConfig.SetValues()
